<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MoversActivity"
    android:background="@drawable/gradient_background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp">
        <!-- Title -->

        <ImageView
            android:id="@+id/biggestmovers_home_btn"
            android:layout_width="70dp"
            android:layout_height="54dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginEnd="10dp"
            android:background="@drawable/baseline_home_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Biggest Movers"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            tools:ignore="HardcodedText"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">

        <Button
            android:id="@+id/biggestmovers_pokemon_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pokemon"
            android:textColor="#FFFFFF"
            android:background="@drawable/biggest_movers_button"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/biggestmovers_MTG_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MTG"
            android:textColor="#FFFFFF"
            android:background="@drawable/biggest_movers_button"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/biggestmovers_YuGiOh_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yu-Gi-Oh"
            android:textColor="#FFFFFF"
            android:background="@drawable/biggest_movers_button" />

    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/biggestmovers_row_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@drawable/biggest_movers_box_background"
        android:layout_margin="6dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/biggestmovers_cardName_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/biggestmovers_cardChange_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/biggestmovers_cardContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" />

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>
