<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PriceCrudActivity"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price Listings"
            android:textSize="32sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Card ID:"
                android:textSize="20dp"
                android:textColor="#ffffff">
            </TextView>

            <EditText
                android:id="@+id/pricecrud_search_txt"
                android:layout_width="wrap_content"
                android:textColor="#ffffff"
                android:layout_height="50dp"
                android:hint="Enter ID">
            </EditText>

            <Button
                android:id="@+id/pricecrud_search_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Find"
                android:textColor="#0B1F3A"
                android:backgroundTint="#FFFFFF"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/pricecrud_currentprice_txt"
            android:text="Current Price: "
            android:textColor="#85BB65"
            android:textSize="20sp"
            android:layout_marginBottom="50dp"
            android:layout_width="230sp"
            android:layout_height="30sp"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Update Price:"
                android:textSize="20dp"
                android:textColor="#ffffff">
            </TextView>

            <EditText
                android:id="@+id/pricecrud_update_txt"
                android:layout_width="wrap_content"
                android:textColor="#ffffff"
                android:layout_height="50dp"
                android:hint="New price">
            </EditText>

            <Button
                android:id="@+id/pricecrud_update_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Go"
                android:textColor="#0B1F3A"
                android:backgroundTint="#FFFFFF"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Record:"
                android:textSize="20dp"
                android:textColor="#ffffff">
            </TextView>

            <EditText
                android:id="@+id/pricecrud_create_txt"
                android:layout_width="wrap_content"
                android:textColor="#ffffff"
                android:layout_height="50dp"
                android:hint="New Price">
            </EditText>

            <Button
                android:id="@+id/pricecrud_create_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Go"
                android:textColor="#0B1F3A"
                android:backgroundTint="#FFFFFF"
                />

        </LinearLayout>

        <Button
            android:id="@+id/pricecrud_deleteALL_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Delete ALL Records of Card ID"
            android:textColor="#FFFFFF"
            android:backgroundTint="#B00020"
            android:layout_marginTop="0dp"/>

        <Button
            android:id="@+id/pricecrud_deleteONE_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Delete Most Recent Record"
            android:textColor="#FFFFFF"
            android:backgroundTint="#B00020"
            android:layout_marginTop="0dp"/>

        <Button
            android:id="@+id/pricecrud_home_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Home"
            android:textColor="#000000"
            android:backgroundTint="#FFFFFF"
            android:layout_marginTop="290dp"/>


    </LinearLayout>

</ScrollView>